--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <!-- Logger -->
         <log4j.version>2.5</log4j.version>
         <!-- Jackson -->
-        <jackson.databind>2.7.2</jackson.databind>
+        <jackson.version>2.7.2</jackson.version>
         <!-- Validation -->
         <validation.api>1.0.0.GA</validation.api>
         <hibernate-validator>4.3.0.Final</hibernate-validator>
@@ -88,7 +88,17 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson.databind}</version>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <!-- Validation -->
         <dependency>
